move common stuff under util
Signed-off-by: Jawaid Hakim <himalayahall@gmail.com>

--- a/src/DailyData_EDA.Rmd
+++ b/src/DailyData_EDA.Rmd
@@ -38,12 +38,12 @@ library(readr)
 ```
 
 ```{r}
-source("SparkFunctions.R")
+source("./util/SparkFunctions.R")
+source("./util/Consts.R")
+source("./util/FilePaths.R")
 ```
 
 ```{r}
-source("./Consts.R")
-source("./FilePaths.R")
 source("./DailyData_CleanStatsTable.R")
 ```
 
