--- a/src/TimeSeries_EDA_SP500.Rmd
+++ b/src/TimeSeries_EDA_SP500.Rmd
@@ -39,9 +39,9 @@ library(readr)
 ```
 
 ```{r}
-source("SparkFunctions.R")
-source("./Consts.R")
-source("./FilePaths.R")
+source("./util/SparkFunctions.R")
+source(".//util/Consts.R")
+source(".//util/FilePaths.R")
 source("./DailyData_CleanStatsTable.R")
 source("./TimeSeries_CleanStatsTable.R")
 
