back to flat src
Signed-off-by: Jawaid Hakim <himalayahall@gmail.com>

--- a/src/DailyData_EDA.Rmd
+++ b/src/DailyData_EDA.Rmd
@@ -38,9 +38,9 @@ library(readr)
 ```
 
 ```{r}
-source("./util/SparkFunctions.R")
-source("./util/Consts.R")
-source("./util/FilePaths.R")
+source("SparkFunctions.R")
+source("Consts.R")
+source("FilePaths.R")
 ```
 
 ```{r}
