--- a/src/DailyData_Scrape.Rmd
+++ b/src/DailyData_Scrape.Rmd
@@ -30,8 +30,8 @@ library(tidyverse)
 ```
 
 ```{r}
-source("./util/Consts.R")
-source("./util/FilePaths.R")
+source("Consts.R")
+source("FilePaths.R")
 ```
 
 # Generate list of data to be processed
