--- a/presentation/Slideshow.Rmd
+++ b/presentation/Slideshow.Rmd
@@ -5,10 +5,6 @@ date: "`r Sys.Date()`"
 output:
      powerpoint_presentation:
             reference_doc: data607-finalproject.pptx
-<<<<<<< HEAD
-    
-=======
->>>>>>> a6b88e073b1d38a6c98f2f5866dcf57c6aada88b
 ---
 
 ```{r include=FALSE}
@@ -56,36 +52,22 @@ library(knitr)
 
 ![OWID Data Exploration](./../presentation/images/SHINY-APP.PNG)
 
-<<<<<<< HEAD
 # Data Exploration - Interactive gerographic exploration using Leaflet
 
 ![OWID Data Exploration](./../presentation/images/LEAFLET-MAP.png)
 
 # Data Analytics - Spark
-=======
--   Shiny for interactive data exploration
-
--   Leaflet for map displays
->>>>>>> a6b88e073b1d38a6c98f2f5866dcf57c6aada88b
 
 -   Spark for data analytics
 
 # Tech Stack
 
-<<<<<<< HEAD
 - **Rselenium**: headless browser capability to solve for embedded JavaScript
 - **parallel**: efficient processing of datsets using local cluster
 - **readr**: reading remote/local CSVs
 - **leaflet**: rendering interactive global map
 - **Spark/sparklr**: proof-of-concept for EDAs on large datasets. Cloud hosted Spark services are either fee-based or time-limited so used a local cluster
-- **AWS S3**: explored storagestoring datasets on AWS/S3. However, S3 storage rate-limits made this impractical (20,000 GET Requests; 2,000 PUT, COPY, POST, or LIST Requests each month)
-=======
--   **Rselenium**: chosen for it's headless browser capability and getting around potential issues with embedded JavaScript. Used to extract daily data URLs
--   **parallel**: chosen for efficiently processing remote data files using a local cluster
--   **readr**: reading remote/local CSVs
--   **leaflet**: render interactive global map
--   **Spark/sparklr**: proof-of-concept for performing EDAs on large datasets in a Spark cluster. Since cloud hosted Spark services are either fee-based or time-limited we used a local cluster
--   **AWS S3**: we looked into storing datasets on AWS S3 and leveraging Spark's built-in S3 connector. However, S3 storage rate-limits made this impractical (20,000 GET Requests; 2,000 PUT, COPY, POST, or LIST Requests each month)
+- **AWS S3**: explored storing datasets on AWS/S3. However, S3 storage rate-limits made this impractical (20,000 GET Requests; 2,000 PUT, COPY, POST, or LIST Requests each month)
 
 # Exploratory Data Analysis
 
