--- a/presentation/Slideshow.Rmd
+++ b/presentation/Slideshow.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "DATA607 - COVID Data"
 author: Josh Iden and Jawaid Hakim 
-date: "`r Sys.Date()`"
+date: March 22, 2005
 output:
      powerpoint_presentation:
             reference_doc: data607-finalproject.pptx
@@ -22,17 +22,17 @@ library(knitr)
 
 # Data Acquisition - JHU CSSE [USA Daily Data](https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports_us)
 
-![US Daily](./../presentation/images/COVIDS-DAILY-US-DATA.PNG)
+![US Daily](images/COVIDS-DAILY-US-DATA.PNG)
 
 # Data Acquisition - JHU CSSE [Global timeseries](https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series)
 
-![Global Timeseries](./../presentation/images/COVIDS-DAILY-GLOBAL-DATA.PNG)
+![Global Timeseries](images/COVIDS-DAILY-GLOBAL-DATA.PNG)
 
 # Data Acquisition - [Our World In Data](https://ourworldindata.org/coronavirus)
 
-![OWID Timeseries](./../presentation/images/COVIDS-DAILY-OWID.PNG)
+![OWID Comprehensive Timeseries](images/COVIDS-DAILY-OWID.PNG)
 
-# Data Wrangling - Parallel Processing
+# Data Wrangling - Strategy
 
 -   Common data extraction scripts/functions across datasets
 
@@ -42,32 +42,28 @@ library(knitr)
 
     -   Spark cluster interface
 
-# Data Wrangling - Hurdles
+# Data Wrangling Milestones
 
 -   Github API [rate limits](https://docs.github.com/en/rest/overview/resources-in-the-rest-api#rate-limiting). Implemented [OAuth authentication](https://docs.github.com/en/developers/apps/building-oauth-apps/authorizing-oauth-apps) to access Github via a personal account for higher limits.
 
 -   OWID dataset did not provide latitude/longitude variables which would be handy for map plots. Downloaded a separate dataset with country lat/long and (left-)joined with OWID for plotting on
 
-# Data Exploration - Interactive exploration using Shiny
+# Data Exploration - Strategy
 
-![OWID Data Exploration](./../presentation/images/SHINY-APP.PNG)
+-   Shiny for interactive data exploration
 
-# Data Exploration - Interactive gerographic exploration using Leaflet
-
-![OWID Data Exploration](./../presentation/images/LEAFLET-MAP.png)
-
-# Data Analytics - Spark
+-   Leaflet for map displays
 
 -   Spark for data analytics
 
 # Tech Stack
 
-- **Rselenium**: headless browser capability to solve for embedded JavaScript
-- **parallel**: efficient processing of datsets using local cluster
-- **readr**: reading remote/local CSVs
-- **leaflet**: rendering interactive global map
-- **Spark/sparklr**: proof-of-concept for EDAs on large datasets. Cloud hosted Spark services are either fee-based or time-limited so used a local cluster
-- **AWS S3**: explored storing datasets on AWS/S3. However, S3 storage rate-limits made this impractical (20,000 GET Requests; 2,000 PUT, COPY, POST, or LIST Requests each month)
+-   **Rselenium**: chosen for it's headless browser capability and getting around potential issues with embedded JavaScript. Used to extract daily data URLs
+-   **parallel**: chosen for efficiently processing remote data files using a local cluster
+-   **readr**: reading remote/local CSVs
+-   **leaflet**: render interactive global map
+-   **Spark/sparklr**: proof-of-concept for performing EDAs on large datasets in a Spark cluster. Since cloud hosted Spark services are either fee-based or time-limited we used a local cluster
+-   **AWS S3**: we looked into storing datasets on AWS S3 and leveraging Spark's built-in S3 connector. However, S3 storage rate-limits made this impractical (20,000 GET Requests; 2,000 PUT, COPY, POST, or LIST Requests each month)
 
 # Exploratory Data Analysis
 
@@ -172,7 +168,7 @@ co.em <- co.mask |>
 
 co.em |> na.omit() |>
   group_by(location) |>
-  summarize(total_excess = sum(excess), avg_policy = mean(face)) |>
+  summarize(total_excess = max(excess), avg_policy = mean(face)) |>
   ggplot(aes(x=avg_policy, y=total_excess)) +
   geom_point()
 ```
@@ -197,3 +193,70 @@ Does average mask policy predict total excess mortality?
 The null hypothesis, $H_0$ - average mask policy *does not* predict total excess mortality. 
 
 The alternative hypothesis, $H_A$ - average mask policy *does* predict total mortality. 
+
+## Relationship Between Variables
+
+```{r, message=FALSE, warning=FALSE}
+### Subsetting Covid data by Shiny app
+cols <- c('location',
+          'total_deaths_per_million',
+          'excess_mortality_cumulative_per_million',
+          'hosp_patients_per_million',
+          'total_cases_per_million',
+          'positive_rate',
+          'total_vaccinations_per_hundred',
+          'population_density',
+          'gdp_per_capita')
+
+# face mask data subset
+fc.sub <- fc |>
+  select(c("location","facial_coverings"))
+
+covid.sub1 <- covid |>
+  select(all_of(cols)) |>
+  na.omit() |>
+  left_join(fc.sub, by="location")
+
+# aggregate the data
+covid.sub2 <- covid.sub1 |>
+  group_by(location) |>
+  summarize(excess_mortality = max(excess_mortality_cumulative_per_million),
+            total_deaths = max(total_deaths_per_million),
+            total_cases = max(total_cases_per_million),
+            total_patients = max(hosp_patients_per_million),
+            positive_rate = mean(positive_rate),
+            total_vaccinations = max(total_vaccinations_per_hundred),
+            pop_density = mean(population_density),
+            gdp_per_capita = mean(gdp_per_capita),
+            mask_policy = mean(facial_coverings))
+
+ggpairs(covid.sub2[, 2:10])
+```
+## Fitting in a Linear Model
+
+```{r}
+model.1 <- lm(excess_mortality ~ mask_policy + pop_density + gdp_per_capita, covid.sub2)
+summary(model.1)
+```
+With an adjusted R-squared of 0.4048, this model only accounts for 40% of the variance in excess mortality. Mask policy also vastly exceeds < 0.05 p-score for significance, so it is not a significant factor. 
+
+## Improving the Model
+
+```{r}
+# dichotomous variable for mask policy below 2.5
+ggplot(covid.sub2, aes(x=mask_policy)) +
+  geom_histogram(bins = sqrt(nrow(covid.sub2))) +
+  labs(title="Distribution of Avg. Mask Policy Scores")
+```
+
+## Improving the Model? (cont'd)
+
+```{r}
+mask <- covid.sub2 |>
+  mutate(mask_policy = ifelse(mask_policy > mean(mask_policy), 1, 0))
+
+# linear model utilizing dichotomous variable
+model.2 <- lm(excess_mortality ~ mask_policy, mask)
+plot(model.2)
+```
+
